Reduce use of TreePath